Changes to Faculty Gudie.

--- a/source/_patterns/01-molecules/08-buttons/event-stamp-buttons.mustache
+++ b/source/_patterns/01-molecules/08-buttons/event-stamp-buttons.mustache
@@ -1,6 +1,6 @@
-        {{# listItems.nine }}
-            <div class="col-md-4">
+        {{# listItems.eight }}
+            <div class="col-md-3">
                     {{>molecules-event-stamp-button}}
             </div>
 
-        {{/ listItems.nine }}
+        {{/ listItems.eight }}
