--- a/source/_patterns/01-molecules/05-navigation/3000-quick-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/3000-quick-nav.mustache
@@ -1,13 +1,13 @@
 <section class="quick-nav">
   <div class="container disable-container-mobile">
     <div class="row no-margin-mobile">
-      <div class="col-md-offset-6">
+      <div class="col-md-8 pull-right">
         <div class="quick-nav--container">
           <ul class="horizontal-list quick-nav--list">
             <li class="quick-nav--list-item"><a href="#" class="quick-nav--link">Solar</a></li>
             <li class="quick-nav--list-item"><a href="#" class="quick-nav--link">Blackboard</a></li>
-            <li class="quick-nav--list-item"><a href="#" class="quick-nav--link">Google Apps</a></li>
-            <li class="quick-nav--list-item"><a href="#" class="quick-nav--link">System Status</a></li>
+            <li class="quick-nav--list-item hidden-xs hidden-sm"><a href="#" class="quick-nav--link">Google Apps</a></li>
+            <li class="quick-nav--list-item"><a href="#" class="quick-nav--link">Report Problem</a></li>
               <div class="quick-nav--search-container hidden-md hidden-sm hidden-xs">
         		    <form class="search-wrapper" action="http://stonybrook.edu/search">
           		    <input class="quick-nav--search" type="text" id="search-form-query1" name="q" title="Search" value="" class="populate" size="30" placeholder="Search This Site">
@@ -16,7 +16,7 @@
                   </button> -->
                 </form>
       	      </div>
-            <li class="hidden-lg"><a href="#">Search</a></li>
+            <li class="quick-nav--list-item hidden-lg"><a href="#" class="quick-nav--link">Search</a></li>
           </ul>
         </div>
       </div>
