--- a/source/src_scss/molecules/cards/_event-card.scss
+++ b/source/src_scss/molecules/cards/_event-card.scss
@@ -1,11 +1,24 @@
+.event-card {
+  margin-bottom: 2em;
+  background-color: $white;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+
+  &:hover,
+  &:focus {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
+}
 .event-card--heading {
-    color: $dark-gray;
-    font-size: 1.5em;
-    line-height: 1.3;
+    color: $white;
+    font-size: 1.1em;
     font-weight: 700;
+    text-transform: uppercase;
+    background-color: $red;
+    padding: 1em;
 }
 .event-card--heading-link {
-  color: $dark-gray;
+  color: $white;
 
   &:hover,
   &:focus {
@@ -21,8 +34,8 @@
 }
 
 .event-card--content {
-    padding: 1.2em 0px;
-    font-size: 1.2em;
+    padding: 1em;
+    font-size: 1em;
     line-height: 1.5;
     a {
         color: $red;
@@ -35,12 +48,11 @@
 
 }
 
-.event-card--date-time{
-    text-transform: uppercase;
-    /* @extend .sbuicon;
+.event-card--date-time:before {
+   @extend .sbuicon;
     color: $red;
     content: "\ea4d";
-    margin-right: 1em; */
+    margin-right: 1em;
 }
 
 .event-card--map:before {
