--- a/source/src_scss/molecules/navigation/_unity-navbar.scss
+++ b/source/src_scss/molecules/navigation/_unity-navbar.scss
@@ -35,12 +35,37 @@
     }
   }
 
+  ul.unity-navbar-nav {
+
+    li.dropdown:hover {
+
+      @media (max-width: 991px) {
+        .unity-navbar-dropdown-menu  {
+          display: block;
+          position: static;
+          float: none;
+          width: auto;
+          margin-top: 0;
+          background-color: transparent;
+          border: 0;
+          box-shadow: none;
+        }
+      }
+
+      .unity-navbar-dropdown-menu {
+        display: block;
+      }
+    }
+  }
+
+
   .unity-navbar-nav {
     @extend .nav;
     @extend .navbar-nav;
 
     margin-top: 0 !important;
     margin-bottom: 0 !important;
+
 
     > .active a {
       color: $white;
@@ -64,15 +89,8 @@
       }
     }
 
-    // Simple css solution to allow hover dropdown.
-  &:hover .unity-navbar-dropdown-menu {
-
-    @include breakpoint($screen-md) {
-       display: inherit;
-      }
-    }
-
     .unity-navbar-dropdown-menu {
+
       @extend .dropdown-menu;
       background-color: #990000;
 
@@ -117,6 +135,7 @@
         {
           background-color: #a00;
           color: #f7f7f7;
+
         }
       }
     }
