deleted validate.js, fixes for event stamp and navbar?

--- a/source/src_scss/molecules/buttons/_event-stamp-button.scss
+++ b/source/src_scss/molecules/buttons/_event-stamp-button.scss
@@ -15,6 +15,7 @@
 
   .event-stamp-button--date {
     width: 100px;
+    min-width: 100px;
     background-color: $red;
     border: 1px solid $red;
     margin-right: 1em;
