fix footer links

--- a/source/src_scss/drupalisms/_tabs.scss
+++ b/source/src_scss/drupalisms/_tabs.scss
@@ -3,7 +3,7 @@ ul.tabs.primary {
     line-height: normal;
         list-style: none;
     list-style-type: none;
-    margin: 1em 0;
+    margin: 0 0 1em 0;
     padding: 0;
 }
 
