Faculty Guide update.

--- a/source/_patterns/04-pages/FacultyOrientationFinal2016.mustache
+++ b/source/_patterns/04-pages/FacultyOrientationFinal2016.mustache
@@ -274,7 +274,7 @@ Fixed position will be removed when back to the top of the page.
               <h3 class="box-card--heading red">Assessment</h3>
           </div>
           <div class="box-card--content" data-match-height="box-card--content">
-            Stony Brook's Google Apps suite of products includes Mail, Calendar, Drive, Contacts, Sites, Groups, Hangouts and a host of other applications to enhance communication and real-time collaboration across campus.
+            Assessment is the process by which faculty clarify what they want students to learn, determine how well students are learning and develop ways to enhance learning.
           </div>
           <div class="box-card--cta">
             <div class="panelAssessment-btn default-button button-small button-block scrollto">More About Assessment &raquo;</div>
