Updated the quick-nav styling.

--- a/source/_patterns/01-molecules/05-navigation/3000-quick-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/3000-quick-nav.mustache
@@ -1,7 +1,7 @@
 <section class="quick-nav">
   <div class="container disable-container-mobile">
     <div class="row no-margin-mobile">
-      <div class="col-md-8 pull-right">
+      <div class="col-md-8 col-md-offset-4 no-padding-mobile">
         <div class="quick-nav--container">
           <ul class="horizontal-list quick-nav--list">
             <li class="quick-nav--list-item"><a href="#" class="quick-nav--link">Solar</a></li>
