--- a/source/src_scss/molecules/buttons/_bold-moves-button.scss
+++ b/source/src_scss/molecules/buttons/_bold-moves-button.scss
@@ -97,7 +97,7 @@
   left: 0px;
   z-index: 2;
 }
-
+/*
 
 .bold-moves-box--fullStory:hover {
   background: #D52027;
@@ -138,4 +138,4 @@
   width: 100%;
   right: 0;
   z-index: 2;
-}
+} */
