--- a/source/src_scss/molecules/navigation/_quick-nav.scss
+++ b/source/src_scss/molecules/navigation/_quick-nav.scss
@@ -10,8 +10,33 @@
   border-radius: 20px;
   width: 100%;
   padding-left: 10px;
+  color: #000;
   display: inline-block;
+
+    ::-webkit-input-placeholder {
+        color: red !important;
+    }
+
+
 }
+
+
+.quick-nav--search-input::-webkit-input-placeholder {
+color: #000;
+}
+
+.quick-nav--search-input:-moz-placeholder { /* Firefox 18- */
+color: #000;
+}
+
+.quick-nav--search-input::-moz-placeholder {  /* Firefox 19+ */
+color: #000;
+}
+
+.quick-nav--search-input:-ms-input-placeholder {
+color: #000;
+}
+
 //TODO HACKS
 .quick-nav--search-button {
   display: none;
@@ -43,7 +68,7 @@
       border-bottom-left-radius: 1em;
       border-bottom-right-radius: 1em;
       color: $dark-gray;
-      font-weight: 900;
+      font-weight: 700;
       text-transform: uppercase;
       font-size: .78em;
       background-color: #fff;
@@ -51,21 +76,23 @@
   }
 }
 
-.quick-nav--link {
-
- color: #ddd;
+.quick-nav--link, a.quick-nav--link, a.quick-nav--link:visited {
+padding: 10px 5px;
+ color: #fff;
+display: block;
 
 
 
     @include breakpoint($screen-md) {
          color: $dark-gray;
-
+         display: inline;
+         padding: 0;
          &:hover,
          &:focus {
            color: $red;
          }
          &:visited {
-           color: $gray;
+           //color: #000;
          }
     }
 
@@ -88,17 +115,27 @@ ul.quick-nav--list {
 }
 
 .quick-nav--list li:last-of-type {
-  border-right: 0 !important;
+  @include breakpoint($screen-md) {
+      border-right: 0 !important;
+  }
+}
+
+.quick-nav--list li:nth-child(even) {
+    border-right: 0;
+
+    @include breakpoint($screen-md) {
+        border-right: 1px solid #4b4b4b;
+    }
 }
 .quick-nav--list-item {
 
-    width: 20%;
+    width: 50%;
     display: inline-block;
     list-style: none;
     border-right: 1px solid #4b4b4b;
     text-align: center;
     margin: 0 -1px 0 -1px;
-    padding: 10px 0;
+
     box-sizing: border-box;
 
 
