--- a/source/src_scss/molecules/buttons/_bold-moves-button.scss
+++ b/source/src_scss/molecules/buttons/_bold-moves-button.scss
@@ -93,11 +93,11 @@
   width: 100%;
   display: block;
   position: absolute;
-  bottom: 50%;
+  bottom: 0;
   left: 0px;
   z-index: 2;
 }
-/*
+
 
 .bold-moves-box--fullStory:hover {
   background: #D52027;
@@ -138,4 +138,4 @@
   width: 100%;
   right: 0;
   z-index: 2;
-} */
+}
