[Prerelease] Bumped version number

--- a/source/src_scss/atoms/buttons/_impact-button.scss
+++ b/source/src_scss/atoms/buttons/_impact-button.scss
@@ -1,4 +1,4 @@
-.impact-button, .impact-button:visited, .impact-button:active    {
+.impact-button    {
     display: inline-block;
     padding: 12px 7px;
     background: $red;
@@ -39,4 +39,3 @@
         background: $red;
     }
 }
-
