event stamp light theme, social links, footer fixes as per loren

--- a/source/src_scss/molecules/navigation/_social-links.scss
+++ b/source/src_scss/molecules/navigation/_social-links.scss
@@ -1,5 +1,11 @@
 .social-links {
 
+  h3 {
+    text-transform: uppercase;
+    font-size: 1.5em;
+    font-weight: 600;
+  }
+
 a.social-link {
     display: inline-block;
     padding: 10px 10px 0;
