additions from loren psd, style fixes as per loren comments

--- a/source/src_scss/atoms/_base.scss
+++ b/source/src_scss/atoms/_base.scss
@@ -17,6 +17,7 @@
 @import "buttons/hero-button";
 @import "buttons/icon-button";
 @import "buttons/tuxedo-button";
+@import "buttons/white-button";
 @import "buttons/override-button";
 
 @import "dividers/dividers";
