--- a/source/src_scss/global/_backgrounds.scss
+++ b/source/src_scss/global/_backgrounds.scss
@@ -59,6 +59,20 @@
 
 ///TEXTURES
 
+.bg-stripes-red {
+    background-image: url("../images/backgrounds/farbeyond-stripes/red-rays-full.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bg-stripes-red-2 {
+    background-image: url("../images/backgrounds/farbeyond-stripes/redSwooshes.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+
+
 .bg-texture-60-lines {
     background-image: url("../images/backgrounds/textures/60-lines.png");
     background-repeat: repeat;
