--- a/source/src_scss/molecules/_molecules-base.scss
+++ b/source/src_scss/molecules/_molecules-base.scss
@@ -11,6 +11,7 @@
 //@import "cards/boldMoves-news-card";
 @import "cards/box-card";
 @import "cards/background-image-card";
+@import "cards/bar-card";
 @import "cards/drop-accordion-card";
 @import "cards/classic-blurb-card";
 @import "cards/simple-blurb-card";
@@ -24,6 +25,7 @@
 @import "cards/stat-card";
 @import "cards/tiles";
 @import "cards/star-heading";
+@import "cards/stripe-heading-card";
 @import "cards/whatsComingUp";
 
 
