--- a/source/src_scss/drupalisms/_tables.scss
+++ b/source/src_scss/drupalisms/_tables.scss
@@ -492,7 +492,7 @@ table th {
     }
 
     tr.even, .views-row-even {
-        background-color: $light-gray;
+        background-color: $x-light-gray;
     }
 }
 
