--- a/source/src_scss/global/_variables.scss
+++ b/source/src_scss/global/_variables.scss
@@ -18,7 +18,7 @@ $white: white;
 
 $red: #990000;
 $stony-brook-red: $red;
-$dark-red: #890000;
+$dark-red: #6B000D;
 $alt-red: #aa0000;
 $light-red: #ff9999;
 $dark-blue: #000033;
