--- a/source/src_scss/molecules/cards/_drop-accordion-card.scss
+++ b/source/src_scss/molecules/cards/_drop-accordion-card.scss
@@ -42,6 +42,9 @@
         transition: all 0.3s;
         color: $red;
     }
+    .drop-accordion-card--icon.sbuicon-link {
+        font-size: 1.2em;
+    }
 }
 
 
