--- a/source/src_scss/organisms/global/_shield-footer.scss
+++ b/source/src_scss/organisms/global/_shield-footer.scss
@@ -1,4 +1,3 @@
- .shield-footer {
-        background-image: url("../images/backgrounds/images/shieldbg.png");
-        background-size: cover;
+ .dark-footer {
+        background-color: $dark-gray;
     }
