--- a/source/src_scss/atoms/buttons/_impact-button.scss
+++ b/source/src_scss/atoms/buttons/_impact-button.scss
@@ -5,7 +5,7 @@
     color: $white;
     font-family: $font-school-spirit;
     text-transform: uppercase;
-    font-weight: normal;
+    font-weight: 700;
     text-shadow: none;
     border-radius: 4px;
     text-align: center;
