--- a/source/src_scss/organisms/tabs/_pills-tabs.scss
+++ b/source/src_scss/organisms/tabs/_pills-tabs.scss
@@ -8,9 +8,11 @@
   text-transform: uppercase;
   font-weight: 700;
 
+
   li a {
-    border: 1px solid #eee;
+    border: 1px solid $light-gray;
     margin-right: 1em;
+    border-radius: 0;
 
     &:hover,
     &:focus {
