quick-nav stripes closes #12

--- a/source/src_scss/molecules/_molecules-base.scss
+++ b/source/src_scss/molecules/_molecules-base.scss
@@ -36,6 +36,7 @@
 @import "navigation/footer-nav";
 @import "navigation/main-nav";
 @import "navigation/quick-nav";
+@import "navigation/quick-nav-stripes";
 @import "navigation/unity-navbar";
 
 @import "navigation/pager";
