--- a/source/_patterns/01-molecules/05-navigation/3000-quick-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/3000-quick-nav.mustache
@@ -6,11 +6,11 @@
           <ul class="horizontal-list quick-nav--list">
             <li class="quick-nav--list-item"><a href="#" class="quick-nav--link">Solar</a></li>
             <li class="quick-nav--list-item"><a href="#" class="quick-nav--link">Blackboard</a></li>
-            <li class="quick-nav--list-item hidden-xs hidden-sm"><a href="#" class="quick-nav--link">Google Apps</a></li>
             <li class="quick-nav--list-item"><a href="#" class="quick-nav--link">Report Problem</a></li>
               <div class="quick-nav--search-container hidden-md hidden-sm hidden-xs">
         		    <form class="search-wrapper" action="http://stonybrook.edu/search">
-          		    <input class="quick-nav--search" type="text" id="search-form-query1" name="q" title="Search" value="" class="populate" size="30" placeholder="Search This Site">
+          		    <input class="quick-nav--search-input" type="text" id="search-form-query1" name="q" title="Search" value="" class="populate" size="30" placeholder="Search This Site">
+                    
                   <!-- <button name="submit" type="submit" class="btn" id="search-form-submit1" alt="Search" aria-label="search">
   	                <span class="sbuicon-search"></span>
                   </button> -->
