--- a/source/src_scss/libraries/bootstrap/_bootstrap.scss
+++ b/source/src_scss/libraries/bootstrap/_bootstrap.scss
@@ -8,7 +8,7 @@
 //normalize is redundant
 @import "bootstrap/normalize";
 @import "bootstrap/print";
-@import "bootstrap/glyphicons";
+//@import "bootstrap/glyphicons";
 
 // Core CSS
 @import "bootstrap/scaffolding";
