--- a/source/src_scss/molecules/navigation/_quick-nav-stripes.scss
+++ b/source/src_scss/molecules/navigation/_quick-nav-stripes.scss
@@ -1,18 +1,33 @@
+.quick-nav-stripes {
+    background-color: #000;
 
-.quick-nav--search-container {
-  display: inline-block;
+    @include breakpoint($screen-md) {
+        background-image: url("../images/backgrounds/rays/gray/skinny.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
 }
-.quick-nav--search-input {
-  font-size: 11px;
-  height: 21px;
+
+
+.quick-nav-stripes--search-container {
+  display: inline-block;
+  width: 160px;
+    min-width: 160px;
+    max-width: 160px;
+}
+.quick-nav-stripes--search-input {
+  font-size: 10px;
+  height: 18px;
   box-shadow: none;
-  border: 1px solid #ddd;
-  background: #ddd;
+  border: 0px;
+  background: #fff;
   border-radius: 20px;
   width: 100%;
   padding-left: 10px;
   color: #000;
   display: inline-block;
+  max-width: 120px;
 
     ::-webkit-input-placeholder {
         color: red !important;
@@ -21,39 +36,33 @@
 
 }
 
+.quick-nav-stripes--search-button {
+    display: inline-block;
+    background: none;
+    border: 0;
+}
 
-.quick-nav--search-input::-webkit-input-placeholder {
+
+.quick-nav-stripes--search-input::-webkit-input-placeholder {
 color: #000;
 }
 
-.quick-nav--search-input:-moz-placeholder { /* Firefox 18- */
+.quick-nav-stripes--search-input:-moz-placeholder { /* Firefox 18- */
 color: #000;
 }
 
-.quick-nav--search-input::-moz-placeholder {  /* Firefox 19+ */
+.quick-nav-stripes--search-input::-moz-placeholder {  /* Firefox 19+ */
 color: #000;
 }
 
-.quick-nav--search-input:-ms-input-placeholder {
+.quick-nav-stripes--search-input:-ms-input-placeholder {
 color: #000;
 }
 
-//TODO HACKS
-.quick-nav--search-button {
-  display: none;
-}
-
-.quick-nav--search-button .sbuicon-search {
-    margin-top: -2px;
-    display: block;
-}
 
 
 
-.quick-nav--container {
-  background-color: #111;
-  border: 0;
-  border-radius: 0;
+.quick-nav-stripes--container {
   text-transform: none;
   font-size: .875em;
   width: 100%;
@@ -63,21 +72,14 @@ color: #000;
   @include breakpoint($screen-md) {
 
       padding: .5em;
-      border-bottom: 1px solid #ccc;
-      border-left: 1px solid #ccc;
-      border-right: 1px solid #ccc;
-      border-bottom-left-radius: 1em;
-      border-bottom-right-radius: 1em;
       color: $dark-gray;
       font-weight: 700;
       text-transform: uppercase;
       font-size: .78em;
-      background-color: #fff;
-
   }
 }
 
-.quick-nav--link, a.quick-nav--link, a.quick-nav--link:visited {
+.quick-nav-stripes--link, a.quick-nav-stripes--link, a.quick-nav-stripes--link:visited {
 padding: 10px 5px;
  color: #fff;
 display: block;
@@ -100,7 +102,7 @@ display: block;
 }
 
 
-.quick-nav--list {
+.quick-nav-stripes--list {
   margin-bottom: 0 !important;
 
   @include breakpoint($screen-md) {
@@ -111,24 +113,24 @@ display: block;
   }
 }
 // Removes default left-margin on ul tag
-ul.quick-nav--list {
+ul.quick-nav-stripes--list {
   margin-left: 0 !important;
 }
 
-.quick-nav--list li:last-of-type {
+.quick-nav-stripes--list li:last-of-type {
   @include breakpoint($screen-md) {
       border-right: 0 !important;
   }
 }
 
-.quick-nav--list li:nth-child(even) {
+.quick-nav-stripes--list li:nth-child(even) {
     border-right: 0;
 
     @include breakpoint($screen-md) {
         border-right: 1px solid #4b4b4b;
     }
 }
-.quick-nav--list-item {
+.quick-nav-stripes--list-item {
 
     width: 50%;
     display: inline-block;
@@ -155,14 +157,14 @@ ul.quick-nav--list {
 
         background-color: $red;
 
-        .quick-nav--link {
+        .quick-nav-stripes--link {
                 color: $white;
         }
 
         @include breakpoint($screen-md) {
-            background-color: #fff;
+            background-color: transparent;
 
-            .quick-nav--link {
+            .quick-nav-stripes--link {
                 color: $red;
             }
         }
