--- a/source/src_scss/molecules/_molecules-base.scss
+++ b/source/src_scss/molecules/_molecules-base.scss
@@ -38,6 +38,7 @@
 @import "navigation/quick-nav";
 @import "navigation/quick-nav-stripes";
 @import "navigation/unity-navbar";
+@import "navigation/jump-nav";
 
 @import "navigation/pager";
 
