added hover to links as per josh recomendation.

--- a/source/src_scss/atoms/text/_links.scss
+++ b/source/src_scss/atoms/text/_links.scss
@@ -1,11 +1,11 @@
-a, a:visited, a:active {
+/*a, a:visited, a:active {
     color: $red;
     text-decoration: none;
 }
 
 a:hover, a.selected {
     color: $dark-gray;
-}
+}*/
 
 a.arrow-link:after {
     display: inline-block;
