--- a/source/src_scss/global/_variables.scss
+++ b/source/src_scss/global/_variables.scss
@@ -103,7 +103,7 @@ $gray: lighten($gray-base, 33.5%) !default; // #555
 $gray-light: lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter: lighten($gray-base, 93.5%) !default; // #eee
 
-$brand-primary: #990000;
+$brand-primary: $red;
 
 //$brand-primary:         darken(#428bca, 6.5%) !default; // #337ab7
 $brand-success: #5cb85c !default;
@@ -125,7 +125,7 @@ $text-color: $gray-dark !default;
 $link-color: $brand-primary !default;
 
 //** Link hover color set via `darken()` function.
-$link-hover-color: darken($link-color, 15%) !default;
+$link-hover-color: $link-color;
 
 //** Link hover decoration.
 $link-hover-decoration: underline !default;
