--- a/source/src_scss/molecules/navigation/_footer-nav.scss
+++ b/source/src_scss/molecules/navigation/_footer-nav.scss
@@ -27,8 +27,10 @@
     ul li a{
         padding: 5px 0 3px 0;
         font-weight: 500;
+        text-decoration: none;
     }
     a:hover{
+        text-decoration: none;
         border-bottom: 2px solid $red;
         color: $red;
 
@@ -43,9 +45,11 @@
 
         ul li a{
             color: $white;
+            text-decoration: none;
         }
         a:hover{
             border-bottom: 2px solid $white;
+            text-decoration: none;
             color: $white;
 
         }
