basic hero background cover

--- a/source/src_scss/libraries/_base.scss
+++ b/source/src_scss/libraries/_base.scss
@@ -27,5 +27,8 @@
 
 @import "libraries/animate/animate";
 
+@import "libraries/fullcalendar/fullcalendar";
+@import "libraries/fullcalendar/fullcalendar-override";
+
 //@import 'third-party/bootstrap/bootstrap-theme';
 //@import 'third-party/bootstrap/bootstrap-fixes';
