--- a/source/src_scss/organisms/_organisms-base.scss
+++ b/source/src_scss/organisms/_organisms-base.scss
@@ -12,6 +12,7 @@
 @import "heros/video-hero";
 
 @import "heros/hero-base.scss";
+@import "heros/hero-basic";
 @import "heros/hero-classic";
 @import "heros/hero-far-beyond";
 @import "heros/hero-split";
