--- a/source/src_scss/global/_mixins.scss
+++ b/source/src_scss/global/_mixins.scss
@@ -21,7 +21,7 @@
         }
 
     }
-
+/*
      .section-themeable.simple-btn
     {
         @extend .simple-btn__text-white;
@@ -31,6 +31,7 @@
     {
         @extend .simple-btn__text-white:hover;
     }
+  */
 }
 
 
@@ -44,7 +45,7 @@
             color: $light-red;
         }
     }
-
+/*
      .section-themeable.simple-btn
     {
         @extend .simple-btn__text-dark;
@@ -54,4 +55,5 @@
     {
         @extend .simple-btn__text-dark:hover;
     }
+    */
 }
