[Prerelease] Bumped version number

--- a/source/_patterns/02-organisms/00-global/550-top-dark-footer.mustache
+++ b/source/_patterns/02-organisms/00-global/550-top-dark-footer.mustache
@@ -1,4 +1,4 @@
-<div class="shield-footer fluffy">
+<div class="dark-footer top-footer fluffy">
     <div class="container">
         <div class="row">
 
