--- a/source/src_scss/molecules/_molecules-base.scss
+++ b/source/src_scss/molecules/_molecules-base.scss
@@ -17,9 +17,11 @@
 @import "cards/simple-blurb-card";
 @import "cards/polaroid-card";
 @import "cards/event-card";
+@import "cards/event-details-card";
 @import "cards/horizontal-card-img";
 @import "cards/link-card";
 @import "cards/list-card";
+@import "cards/news-item-link";
 @import "cards/reveal-card";
 @import "cards/slideout-panel";
 @import "cards/stat-card";
@@ -45,3 +47,4 @@
 @import "navigation/sbu-bootstrap-sitenav";
 @import "navigation/sidebar";
 @import "navigation/social-links";
+
