[Prerelease] Bumped version number

--- a/source/src_scss/atoms/text/_headings.scss
+++ b/source/src_scss/atoms/text/_headings.scss
@@ -208,7 +208,7 @@ i.heading-icon {
 
 .stripes-heading {
     background: #900;
-    background: url(../images/backgrounds/farbeyond-stripes/red-rays-full.jpg) 0 0 no-repeat;
+    background: url(../images/backgrounds/rays/headers/header-stripe.png) 0 0 no-repeat;
     background-size: cover;
     color: #fff;
     letter-spacing: 0.005em;
@@ -225,4 +225,5 @@ i.heading-icon {
     overflow: hidden;
     text-overflow: ellipsis;
     margin: 0 0 10px;
+    font-size: 1.25em;
 }
