--- a/source/src_scss/molecules/navigation/_quick-nav-stripes.scss
+++ b/source/src_scss/molecules/navigation/_quick-nav-stripes.scss
@@ -37,9 +37,10 @@
 }
 
 .quick-nav-stripes--search-button {
-    display: inline-block;
+    /*display: inline-block;
     background: none;
-    border: 0;
+    border: 0;*/
+    display: none;
 }
 
 
@@ -76,6 +77,7 @@ color: #000;
       font-weight: 700;
       text-transform: uppercase;
       font-size: .78em;
+      text-align: right;
   }
 }
 
